--- a/package.json
+++ b/package.json
@@ -1,28 +1,33 @@
 {
-  "name": "idea-board-code-along",
+  "name": "plentyOfGit",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "10.13.0"
+  },
   "scripts": {
     "start": "node server.js",
-    "dev": "concurrently \"nodemon server.js\" \"cd ./client && npm start \" ",
+    "dev": "concurrently \"nodemon server.js\" \"cd client && npm start\"",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "cd client && npm install && npm run build"
-  },
-  "engines": {
-    "node": "10.0.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://git.generalassemb.ly/chadthecoder/idea-board-code-along.git"
+    "postinstall": "cd client && npm i && npm run build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
     "concurrently": "^4.1.0",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
-    "mongoose": "^5.4.19"
-  }
+    "mongodb": "^3.1.13",
+    "mongodb-uri": "^0.9.7",
+    "mongoose": "^5.4.19",
+    "morgan": "^1.9.1",
+    "nodemon": "^1.18.10",
+    "react-router-dom": "^5.0.0",
+    "styled-components": "^4.1.3"
+  },
+  "devDependencies": {}
 }
